--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,14 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://new-welding-product.vercel.app/" />
+    <meta property="og:url" content="https://neo-shop-five.vercel.app/" />
     <meta property="og:title" content="Welding Work - High-Quality Welding Products and Services" />
     <meta property="og:description" content="Discover top-notch welding products and services. Visit our site for more information on welding tools, equipment, and accessories." />
     <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://new-welding-product.vercel.app/" />
+    <meta property="twitter:url" content="https://neo-shop-five.vercel.app/" />
     <meta property="twitter:title" content="Welding Work - High-Quality Welding Products and Services" />
     <meta property="twitter:description" content="Discover top-notch welding products and services. Visit our site for more information on welding tools, equipment, and accessories." />
     <meta property="twitter:image" content="%PUBLIC_URL%/og-image.png" />
@@ -31,7 +31,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Canonical Link -->
-    <link rel="canonical" href="https://new-welding-product.vercel.app/" />
+    <link rel="canonical" href="https://neo-shop-five.vercel.app/" />
 
     <!-- Robots Meta Tag -->
     <meta name="robots" content="index, follow" />
@@ -50,7 +50,7 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "Welding Work",
-      "url": "https://new-welding-product.vercel.app/",
+      "url": "https://neo-shop-five.vercel.app/",
       "logo": "%PUBLIC_URL%/logo192.png",
       "sameAs": [
         "https://www.facebook.com/yourprofile",
